src/components/Product List/ProductPage.module.css
.product-page {
    margin: 8rem 10rem 18rem 3rem;
    display: grid;
    grid-template-columns: 9.6rem 60rem 35rem;
    gap: 2.7rem;
    animation: appear-up .5s;
}

@keyframes appear-up {
    from {
        transform: translateY(3rem);
        opacity: 0;
    }
    to {
        transform: translateY(0);
        opacity: 1;
    }
}

.gallery {
    width: 9rem;
    display: flex;
    flex-direction: column;
    gap: 3.2rem;

}

.gallery div {
    height: 8.5rem;
    display: flex;
    justify-content: center;
    transition: .2s;
    overflow: hidden;
    cursor: pointer;
}

.gallery div:hover {
    transform: translate(-5%, -5%);
    box-shadow: rgba(126, 216, 149, 0.4) 2px 2px, rgba(126, 216, 149, 0.3) 5px 5px, rgba(126, 216, 149, 0.2) 7px 7px, rgba(126, 216, 149, 0.1) 10px 10px, rgba(126, 216, 149, 0.05) 12px 12px;
}

.gallery div:active {
    transform: translate(-2.5%, -2.5%);
    box-shadow: rgba(126, 216, 149, 0.4) 1px 1px, rgba(126, 216, 149, 0.3) 5px 5px, rgba(126, 216, 149, 0.2) 3px 3px, rgba(126, 216, 149, 0.1) 5px 5px, rgba(126, 216, 149, 0.05) 6px 6px;
}


.gallery div img {
    height: 8.5rem;
    width: auto;
}

.spotlight {
    height: 51.2rem;
    overflow: hidden;
    display: flex;
    justify-content: center;
}

.spotlight img {
    height: 51.2rem;
    width: auto;
}

.product-info {
    display: flex;
    flex-direction: column;
    margin-left: 5.3rem;
}

h1 {
    font-size: 3rem;
    line-height: 2.7rem;
    margin-bottom: 1.6rem;
}

.title {
    font-weight: 400;
    margin-bottom: 4.3rem;
}

h2 {
    font-size: 1.8rem;
    font-weight: 700;
    margin-bottom: .8rem;
    font-family: Roboto Condensed, sans-serif;
    font-style: normal;
}

.attributes {
    margin-bottom: 2.4rem;
    display: flex;
    gap: 1.2rem;
    flex-direction: row;
}

.size {
    width: 6.3rem;
    height: 4.5rem;
    border: 1px solid #1D1F22;
    background-color: #fff;
    color: #1D1F22;
    font-size: 1.6rem;
    line-height: 1.8rem;
    font-family: "Source Sans Pro", sans-serif;
    font-weight: 400;
    transition: .15s;
    cursor: pointer;
}

.size:hover,
.size:active {
    color: #fff;
    background-color: #1D1F22;
}

.selected {
    background-color: #1D1F22;
    color: #fff;
}

.color {
    width: 3.2rem;
    height: 3.2rem;
    border: none;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 1px, rgb(222, 222, 222) 0px 0px 0px 1px;
    cursor: pointer;
    transition: .2s;
}

.color:hover {
    border: 1px solid #5ECE7B;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 1px, rgb(94, 206, 123) 0px 0px 0px 1px;
}

.color-selected {
    border: 1px solid #5ECE7B;
    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 1px, rgb(94, 206, 123) 0px 0px 0px 1px;
}

.color-selected:focus {
    animation: spin .2s;
}

@keyframes spin {
    from {
        rotate: -90deg;
    }

    to {
        rotate: 0;
    }
}

.price {
    font-size: 2.4rem;
    line-height: 1.8rem;
    font-weight: 700;
    color: #1D1F22;
    margin-bottom: 2rem;
}

.add-to-cart {
    font-family: "Raleway", sans-serif;
    font-size: 1.6rem;
    font-style: normal;
    font-weight: 600;
    line-height: 1.9rem;
    display: flex;
    align-items: center;
    color: #FFFFFF;
    flex: none;
    order: 0;
    flex-grow: 0;
    flex-direction: column;
    padding: 1.6rem 3.2rem;
    background: #5ECE7B;
    border: none;
    margin-bottom: 4rem;
    cursor: pointer;
    transition: .2s;
}

.add-to-cart:hover {
    background: #52b46c;
}

.add-to-cart:active {
    background: #3e8852;
}

.description {
    font-family: 'Roboto', sans-serif;
    font-size: 1.6rem;
    line-height: 25.59px;
}

